[project]
name = "10-agent-devops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.3",
    "fastapi>=0.135.2",
    "langchain-core>=1.2.22",
    "langchain-xai>=1.2.2",
    "langgraph>=1.1.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "tree-sitter>=0.25.2",
    "uvicorn>=0.42.0",
]
