[project]
name = "10-agent-devops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.3",
    "chromadb>=1.5.5",
    "docker>=7.1.0",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "langchain-core>=1.2.22",
    "langchain-google-genai>=4.2.1",
    "langchain-xai>=1.2.2",
    "langgraph>=1.1.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "sentence-transformers>=5.3.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "uvicorn>=0.42.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "graph*", "agents*", "worker*", "sandbox*", "context_engine*"]
